2009-09-28  Kai Tietz  <kai.tietz@onevision.com>

	* _mingw_mac.h: Set new version to 1.1 and state to alpha.

2009-09-28  Kai Tietz  <kai.tietz@onevision.com>

	* sdkddkver.h: New.

2009-09-20  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw_mac.h: Added default definitions of __PTRDIFF_TYPE__,
	__SIZE_TYPE__, __WINT_TYPE__ and __WCHAR_TYPE__ for cases where these
	headers are not used with gcc.
	* _mingw.h: Removed an obsoleted check for __WINT_TYPE__.

	* _mingw.h: Added missing #define _PTRDIFF_T_.

	* vadefs.h: Added a noted that _CRT_PACKING definition being duplicated
	in _mingw.h.
	* _mingw.h: Moved some stuff around for better readability.  Moved the
	extern "C" marker to just the beginning of the function declarations at
	the end. Added a noted that _CRT_PACKING definition being duplicated in
	vadefs.h.

	* _mingw.h (__USE_MINGW_ANSI_STDIO): If not explicitly defined by the
	user, only check against the _POSIX define when forcibly enabling it.

2009-09-19  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw.h (__USE_MINGW_ANSI_STDIO): If not explicitly defined by the
	user, but when any of the _POSIX, __STRICT_ANSI__, _ISOC99_SOURCE,
	_POSIX_SOURCE, _POSIX_C_SOURCE, _XOPEN_SOURCE, _XOPEN_SOURCE_EXTENDED,
	_GNU_SOURCE, _BSD_SOURCE or _SVID_SOURCE macros is defined, assume that
	ANSI I/O standards are preferred over Microsoft's and define it as 1.

	* _mingw.h: Made the __forceinline definition to mirror the FORCEINLINE
	definition in winnt.h

2009-09-18  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw.h, io.h, rpcndr.h, strsafe.h. time.h, vadefs.h:  Now that the
	__MINGW_EXTENSION macro is in effect, remove the gcc-specific typedefs
	using machine modes for strict ansi cases and 64 bit scalars.

	* wctype.h: Added the missing __cplusplus guard around wchar_t typedef.

2009-09-18  Kai Tietz  <kai.tietz@onevision.com>

        * Implement time_t related functions by stubs in libmingwex.a and do
        export them in .def as DATA. So just the imp_<name> is present and we